--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
       </ul>
     </nav>
    </header> 
+
+<!-- Represents a navigation menu -->
+   <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
