--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
       <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
+
+<!--  Represents the main content of the document.-->
+  <main>
+    <h2>Welcome to our website!</h2>
+    <p>Here, you can find information about our services and products.</p>
+  </main>
 </body>
 </html>
