--- a/index.html
+++ b/index.html
@@ -32,5 +32,13 @@
     <h2>Welcome to our website!</h2>
     <p>Here, you can find information about our services and products.</p>
   </main>
+
+
+
+<!-- Represents a self-contained composition within a document, such as a blog post or news article. -->
+  <article>
+    <h2>How to Create a Semantic HTML Document</h2>
+    <p>... (content of the article) ...</p>
+  </article>
 </body>
 </html>
