--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
     <h2>How to Create a Semantic HTML Document</h2>
     <p>... (content of the article) ...</p>
   </article>
+
+  <!-- Represents a thematic grouping of content, such as chapters or different parts of a webpage -->
+  <section>
+    <h2>About Us</h2>
+    <p>Learn more about our company and our mission.</p>
+  </section>
 </body>
 </html>
