--- a/index.html
+++ b/index.html
@@ -46,5 +46,14 @@
     <h2>About Us</h2>
     <p>Learn more about our company and our mission.</p>
   </section>
+
+<!-- Represents content that is tangentially related to the content around it, often displayed as a sidebar -->
+  <aside>
+    <h3>Related Links</h3>
+    <ul>
+      <li><a href="/blog">Latest Blog Posts</a></li>
+      <li><a href="/newsletter">Subscribe to our Newsletter</a></li>
+    </ul>
+  </aside>
 </body>
 </html>
