--- a/index.html
+++ b/index.html
@@ -55,5 +55,11 @@
       <li><a href="/newsletter">Subscribe to our Newsletter</a></li>
     </ul>
   </aside>
+
+<!-- Represents the footer of a section or the entire page, typically containing copyright information and contact details -->
+  <footer>
+    <p>&copy; 2023 My Website</p>
+    <p>Contact us at info@mywebsite.com</p>
+  </footer>
 </body>
 </html>
